give correct illusion of depth
the current value is too low. To look like a true flipping effect
we need more perspective

--- a/src/notabene.css
+++ b/src/notabene.css
@@ -44,7 +44,7 @@ a:hover {
 	width: 900px;
 	margin: auto;
 	position: relative;
-	-webkit-perspective: 0.6;
+	-webkit-perspective: 400;
 }
 
 #container {
